--- a/index.css
+++ b/index.css
@@ -1,10 +1,6 @@
 
 html {
-	background: #fff url(background.jpg) no-repeat center center fixed; 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+	background: #white; 
 }
 
 header {
@@ -15,41 +11,44 @@ header {
 	color: #1010f0; 
 }
 
-.intro h1 { 
-	font: italic normal 3.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	color: #1010f0;
-}
-.intro h2 { 
-	font: italic normal 2.4em georgia, sans-serif;
-}
-.intro h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
+.intro p { 
+	font: normal 1.4em Century Gothic;
+    color: black;
+    padding-left: 5%; 
 }
 
-.intrologo { 
-	float: right; 
+.intrologo img{ 
+    width: 100%;
+    height: 100%;
 }
 
+.introsidebar img { 
+    display: block;
+    width: 30%;
+    height: 30%;
+    float : right;
+}
+
+.introlower img{ 
+    width: 100%;
+    height: 100%;
+}
 
 .navmenu {
-    font: normal 1.0em georgia, sans-serif;
+    font: normal 1.0em Century Gothic;
     padding: 0; 
-    margin: 0; 
+    margin: 5%; 
     list-style: none;
 }
 .navmenu li {
     float:left; 
     padding-top:2px;
-    //background: yellow; 
 }
 .navmenu li a b {
     display:block; 
     width:100px; 
     line-height:40px; 
-    float:left; 
-    padding:0px 10px 0px 10px; 
-    //background: red;
+    padding:5px 10px 0px 10px; 
     color: darkblue;
     cursor:pointer;
     text-decoration:none;
@@ -57,10 +56,7 @@ header {
 
 
 .navmenu a:hover b:hover {
-    //background-position:left -51px;
-    //height:40px;
-    //background: red;
-    color: white;
+    color: lightblue;
 }
 
 .tc-index #tc-navmenu #home a b, 
@@ -128,6 +124,17 @@ header {
     margin-left: 5%;
 }
 
+#tc-bandmembers {
+    margin-left: 5%;
+	font: normal 1.0em Century Gothic;
+    color: black;
+    width:100%;
+}
+#tc-bandmembers  td {
+	text-align: center; 
+    width:25%;
+}
+
 
 .info h3 { 
 	font: italic normal 1.4em georgia, sans-serif;
@@ -167,6 +174,36 @@ header {
     list-style-type:none;
 }
 
+#tc-footerblockouter { 
+    background: red; 
+}
 
+#tc-footerblock, #tc-infofooter { 
+	font: 1.0em impact;
+    background: red; 
+    margin-left: 2%;
+    padding:10px 10px 10px 10px; 
+}
+#tc-footerblock h3 { 
+	font: 1.6em impact;
+	color: white;
+}
+#tc-footerblock  p { 
+	font: 1.2em impact;
+	color: white;
+}
+#tc-footerblock a, a:link { 
+    text-decoration:none;
+	color: white;
+}
+#tc-footerblock a:hover, a:focus{ 
+	color: yellow;
+}
 
-
+#tc-infofooter a, a:link { 
+    text-decoration:none;
+	color: white;
+}
+#tc-infofooter a:hover, a:focus { 
+	color: yellow;
+}
