--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 html {
-	background: #white; 
+	background: #white url(background.jpg); 
 }
 
 header {
@@ -8,7 +8,7 @@ header {
 }
 
 .intro { 
-	color: #1010f0; 
+    color: black;
 }
 
 .intro p { 
@@ -18,8 +18,7 @@ header {
 }
 
 .intrologo img{ 
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
 }
 
 .introsidebar img { 
@@ -29,9 +28,27 @@ header {
     float : right;
 }
 
+.links-name, .links-name:link, .links-name:visited { 
+    text-decoration:none;
+	color: black;
+}
+.links-name:hover, .links-name:focus{ 
+	color: lightblue;
+}
+
+#tc-trackList2 { 
+    color: black;
+	font: normal 1.4em Century Gothic;
+    color: black;
+    padding-left: 5%; 
+	border: none;
+}
+
+
 .introlower img{ 
     width: 100%;
-    height: 100%;
+    //height: 100%;
+    max-width: 100%;
 }
 
 .navmenu {
@@ -42,13 +59,12 @@ header {
 }
 .navmenu li {
     float:left; 
-    padding-top:2px;
 }
 .navmenu li a b {
     display:block; 
-    width:100px; 
+    width:90px; 
     line-height:40px; 
-    padding:5px 10px 0px 10px; 
+    padding:5px 10px 5px 10px; 
     color: darkblue;
     cursor:pointer;
     text-decoration:none;
@@ -62,67 +78,12 @@ header {
 .tc-index #tc-navmenu #home a b, 
 .tc-diary #tc-navmenu #diary a b, 
 .tc-tracklist #tc-navmenu #tracklist a b, 
-.tc-history #tc-navmenu #history a b{
+.tc-contact #tc-navmenu #contact a b{
     background: darkblue; 
     color: lavender;
     width:100px;
 }
 
-
-.info {
-    float:left;
-    width:100%;
-}
-
-.column1 {
-    float:left;
-    width:100%;
-    background:yellow;
-    position:relative;
-    right:25%;
-
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	font: georgia, sans-serif;
-	color: indigo; 
-}
-
-.column2 {
-    float:left;
-    width:100%;
-    background:yellow;
-    position:relative;
-    overflow:hidden;
-
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	font: 90% georgia, sans-serif;
-	color: indigo; 
-}
-
-.info {
-    float:left;
-    width:68%;
-    position:relative;
-    left:26%;
-    overflow:hidden;
-}
-
-.sidebar {
-    float:left;
-    width:32%;
-    position:relative;
-    left:32%;
-    overflow:hidden;
-}
-
-.infotext {
-    margin-left: 5%;
-}
 
 #tc-bandmembers {
     margin-left: 5%;
@@ -135,44 +96,10 @@ header {
     width:25%;
 }
 
-
-.info h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	color: #1010f0;
-}
-.info a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #1010f0;
-}
-.info a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #555753;
-}
-.info a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-}
-
 .infofooter { 
 	text-align: center; 
 }
 
-.links { 
-    margin-left: 5%;
-	font: normal 1.0em georgia, sans-serif;
-}
-.links h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	color: #1010f0;
-}
-.links ul { 
-    padding:0;
-    list-style-type:none;
-}
 
 #tc-footerblockouter { 
     background: red; 
