--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 html {
-	background: #C0C0C0; 
+	background: #E7E7E7; 
 }
 
 header {
@@ -13,13 +13,18 @@ header {
 }
 
 .intro, .introtext { 
-    color: #050507;
+    color: #434343;
 }
 
-.intro p, .introtext p { 
-	font: normal 1.4em Century Gothic;
-    color: #050507;
+.intro p, .introtext p  { 
+	font-size: 1.2em;
+	font-family:  Trebuchet, Verdana, Helvetica, Arial, sans-serif;
+    color: #434343;
     padding-left: 5%; 
+}
+
+.intrologo { 
+	background: #E7E7E7;
 }
 
 .intrologo img{ 
@@ -34,15 +39,16 @@ header {
 
 .links-name, .links-name:link, .links-name:visited { 
     text-decoration:none;
-	color: #050507;
+	color: #434343;
 }
 .links-name:hover, .links-name:focus{ 
 	color: lightblue;
 }
 
 #tc-trackList2 { 
-	font: normal 1.4em Century Gothic;
-    color: #050507;
+	font-size: 1.4em;
+	font-family:  Trebuchet, Verdana, Helvetica, Arial, sans-serif;
+    color: #434343;
     padding-left: 5%; 
 	border: none;
 }
@@ -54,7 +60,8 @@ header {
 }
 
 .navmenu {
-    font: normal 1.0em Century Gothic;
+	font-size: 1.0em;
+	font-family:  Trebuchet, Verdana, Helvetica, Arial, sans-serif;
     padding: 0; 
     margin: 5%; 
     list-style: none;
@@ -81,7 +88,7 @@ header {
 .tc-diary #tc-navmenu #diary a b, 
 .tc-tracklist #tc-navmenu #tracklist a b, 
 .tc-contact #tc-navmenu #contact a b{
-    background: #98D1D1;
+    background: #B1CCE7;
     color: #5B5B5B;
     width:100px;
 }
@@ -89,8 +96,9 @@ header {
 
 #tc-bandmembers {
     margin-left: 5%;
-	font: normal 1.0em Century Gothic;
-    color: #050507;
+	font-size: 0.9em;
+	font-family:  Trebuchet, Verdana, Helvetica, Arial, sans-serif;
+    color: #434343;
     width: 100%;
     max-width: 100%;
 }
@@ -101,11 +109,12 @@ header {
 
 #tc-infoaudio  {
     margin-left: 5%;
-	font: normal 1.4em Century Gothic;
+	font-size: 1.2em;
+	font-family:  Trebuchet, Verdana, Helvetica, Arial, sans-serif;
 }
 #tc-infoaudio a, a:link { 
     text-decoration:none;
-	color: #050507;
+	color: #434343;
 }
 #tc-infoaudio a:hover, a:focus { 
 	color: #5B5B5B;
@@ -124,26 +133,29 @@ header {
 
 
 #tc-footerblockouter { 
-    background: #98D1D1; 
+    background: #B1CCE7; 
 }
 
 #tc-footerblock, #tc-infofooter { 
-	font: 1.0em impact;
-    background: #98D1D1; 
+	font-size: 1.0em;
+	font-family: Impact, Helvetica, Arial, sans-serif;
+    background: #B1CCE7; 
     margin-left: 2%;
     padding:10px 10px 10px 10px; 
 }
 #tc-footerblock h3 { 
-	font: 1.6em impact;
-	color: #050507;
+	font-size: 1.6em;
+	font-family: Impact, Helvetica, Arial, sans-serif;
+	color: #434343;
 }
 #tc-footerblock  p { 
-	font: 1.2em impact;
-	color: #050507;
+	font-size: 1.2em;
+	font-family: Impact, Helvetica, Arial, sans-serif;
+	color: #434343;
 }
 #tc-footerblock a, a:link { 
     text-decoration:none;
-	color: #050507;
+	color: #434343;
 }
 #tc-footerblock a:hover, a:focus{ 
 	color: #5B5B5B;
@@ -151,7 +163,7 @@ header {
 
 #tc-infofooter a, a:link { 
     text-decoration:none;
-	color: #050507;
+	color: #434343;
 }
 #tc-infofooter a:hover, a:focus { 
 	color: #5B5B5B;
