--- a/index.css
+++ b/index.css
@@ -112,13 +112,16 @@ header {
 	font-size: 1.2em;
 	font-family:  Trebuchet, Verdana, Helvetica, Arial, sans-serif;
 }
-#tc-infoaudio a, a:link { 
+#tc-infoaudio a { 
     text-decoration:none;
-	color: #434343;
+	color: #107272;
 }
-#tc-infoaudio a:hover, a:focus { 
-	color: #5B5B5B;
+
+#tc-infoaudio a:hover, a:link { 
+    text-decoration:none;
+	color: #308282;
 }
+
 #player {
 	width:40%;
 	height:50px;
